# beast2grpc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  conanfile.txt  config.cc  config.hh  main.cc
data/: config.json
grpc/: call_rpc.cc  call_rpc.hh  config.json  grpc_fn.cc  grpc_fn.hh  grpc_service.cc  grpc_service.hh  grpc_wrapper.cc  grpc_wrapper.hh
http/: http_listener.cc  http_listener.hh  http_session.cc  http_session.hh
src/: config.cc  main.cc
src/grpc/: call_rpc.cc  call_rpc.hh  grpc_fn.cc  grpc_fn.hh  grpc_service.cc  grpc_wrapper.cc  grpc_wrapper.hh  proto_reflection_descriptor_database.cc  proto_reflection_descriptor_database.h
src/http/: http_listener.hh  http_session.hh
test/: CMakeLists.txt  config.cc  main.cc
tests/: CMakeLists.txt  config.cc
